--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -25,6 +25,7 @@ spring:
               - PUT
               - DELETE
               - PATCH
+              - OPTIONS
 
       routes:
         - id: sds-identity-provider
