--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -25,6 +25,7 @@ spring:
               - PUT
               - DELETE
               - PATCH
+              - OPTIONS
 
       routes:
         - id: sds-identity-provider
