--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     dependencies {
         classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.5.6")
+        compile 'org.springframework.metrics:spring-metrics:latest.release'
+        compile 'io.prometheus:simpleclient_common:latest.release'
     }
 }
 
